# labrobot

./: .gitignore  AUTONOMOUS_SUMMARY.md  CMakeLists.txt  README.md  README_AUTONOMOUS.md  USAGE_GUIDE.md  package.xml
config/: debug_robot.rviz
description/: camera.xacro  depth_camera.xacro  gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
launch/: autonomous_navigation_node.py  pi.autonomous.launch.py  pi.autonomous.serial.launch.py  pi.basic.sensors.launch.py  pi.cv.launch.py  pi.full.launch.py  pi.lidar.depthsensor.launch.py  pi.lidar.launch.py  pi_launch.py  rsp.launch.py  sim.launch.py
log/: latest_list
notes/: README.md  References.md  about_mpremote.md  install_ros2_jazzy_gazebo_harmonic.md  install_ros2_jazzy_ros_gz_bridge.md  lidar.md  measurements.yaml  raspi_implementation.md  troubleshooting_rviz_robot_model.md  wsl.md  wsl2_usb.md
notes/test_outputs/: pi_basic_output.txt  pi_full_output.txt
script/: basic_odom_publisher.py
scripts/: autonomous_navigation_node.py  autonomous_navigation_wrapper.py  basic_odom_publisher.py  labrobot_square.py  manual_robot_control.py  monitor_robot.sh  nav_control.py  reset_emergency_stop.py  robot_perception_monitor.py  serial_motor_bridge.py  serial_motor_bridge_wrapper.py  serial_nav_control.py  test_micropython_controller.py
upython/: main.old.py  main.py  ros2_autonomous_main.py  ros2_serial_main.py  wifi_config.py
